--- a/src/components/linksComponents/home/gameCards/renderCards.module.scss
+++ b/src/components/linksComponents/home/gameCards/renderCards.module.scss
@@ -6,9 +6,12 @@
   background-size: cover;
   position: relative;
   perspective: 1000px;
+  background-color: black;
+  border: none;
 
   .front,
   .back {
+    top: 0;
     text-align: center;
     position: absolute;
     backface-visibility: hidden;
