--- a/src/modal/modal.module.scss
+++ b/src/modal/modal.module.scss
@@ -16,11 +16,11 @@
     position: fixed;
     padding: 20px;
     color: blue;
-    height: 30vh;
+    min-height: 30vh;
     width: 30vw;
     background-color: black;
     display: flex;
-    align-items: center;
+    // align-items: center;
     justify-content: center;
     border-radius: 20px;
     border-bottom: solid 3px white;
