changed classnames in scss

--- a/src/elements/inputs/inputCheckbox/inputCheckbox.module.scss
+++ b/src/elements/inputs/inputCheckbox/inputCheckbox.module.scss
@@ -1,9 +1,9 @@
-.inputLabel {
+.input_label {
   margin-right: 10px;
   white-space: nowrap;
 }
 
-.inputText {
+.input_text {
   margin-right: 10px;
   padding: 4px;
   background-color: black;
