--- a/src/components/linksComponents/home/searchBar/listResults/listResults.module.scss
+++ b/src/components/linksComponents/home/searchBar/listResults/listResults.module.scss
@@ -1,10 +1,11 @@
 .list_results {
-  background-color: gray;
-  position: absolute;
-  width: 100%;
-  border-color: transparent;
-  transition: 0.1s linear;
-  border-bottom: solid 3px transparent;
-  border-radius: 20px;
-  padding: 10px;
+    background-color: gray;
+    position: absolute;
+    width: 100%;
+    border-color: transparent;
+    transition: 0.1s linear;
+    border-bottom: solid 3px transparent;
+    border-radius: 20px;
+    padding: 10px;
+    top: 53px;
 }
