--- a/src/components/linksComponents/products/filter/filter.module.scss
+++ b/src/components/linksComponents/products/filter/filter.module.scss
@@ -4,9 +4,9 @@
 
 .filter {
   padding: 20px;
-  min-height: 300px;
+  max-height: 710px;
   background-color: black;
-  border: chocolate 2px solid;
+  border: 1px solid #8b00ff;
   width: 25%;
 
   .horizontal_line {
