--- a/src/components/linksComponents/home/categories/categories.module.scss
+++ b/src/components/linksComponents/home/categories/categories.module.scss
@@ -1,7 +1,7 @@
 .categoriesContent {
   border: 1.5px solid white;
   border-radius: 20px;
-  width: 80%;
+  width: 62%;
   padding: 18px 24px;
   margin-bottom: 30px;
   color: white;
@@ -18,6 +18,8 @@
     height: 100%;
 
     .card {
+      cursor: pointer;
+      background-color: black;
       padding: 10px;
       display: flex;
       flex-direction: column;
