--- a/src/components/linksComponents/home/gameCards/gameCards.module.scss
+++ b/src/components/linksComponents/home/gameCards/gameCards.module.scss
@@ -1,7 +1,7 @@
 .categoriesContent {
   border: 1.5px solid white;
   border-radius: 20px;
-  width: 80%;
+  width: 60%;
   padding: 18px 24px;
   background-color: black;
 
@@ -14,5 +14,6 @@
   .blockcards {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-evenly;
   }
 }
