--- a/src/components/linksComponents/home/searchBar/listResults/listResults.module.scss
+++ b/src/components/linksComponents/home/searchBar/listResults/listResults.module.scss
@@ -1,11 +1,11 @@
 .list_results {
-    background-color: gray;
-    position: absolute;
-    width: 100%;
-    border-color: transparent;
-    transition: 0.1s linear;
-    border-bottom: solid 3px transparent;
-    border-radius: 20px;
-    padding: 10px;
-    top: 53px;
+  background-image: url(https://media.istockphoto.com/photos/star-field-at-night-picture-id501655522?b=1&k=20&m=501655522&s=170667a&w=0&h=yxV0H4RLzwn_roNsSxejPhL0JAQl7YGguAeL1PtniZw=);
+  position: absolute;
+  width: 100%;
+  border-color: transparent;
+  transition: 0.1s linear;
+  border-bottom: solid 3px transparent;
+  border-radius: 20px;
+  padding: 10px;
+  top: 53px;
 }
