--- a/src/components/linksComponents/home/gameCards/renderCards.module.scss
+++ b/src/components/linksComponents/home/gameCards/renderCards.module.scss
@@ -52,7 +52,30 @@
         border-color: transparent;
         padding: 4px 7px;
         text-align: center;
+        transition: all 0.4s ease-in;
         cursor: pointer;
+
+        &:before {
+          content: "";
+          background-color: aliceblue;
+          border-radius: 50%;
+          display: block;
+          position: absolute;
+          top: 0;
+          right: 0;
+          bottom: 0;
+          left: 0;
+          transform: scale(0.001, 0.001);
+        }
+
+        &:focus {
+          outline: 0;
+          color: #fff;
+
+          &:before {
+            animation: effect_dylan 0.8s ease-out;
+          }
+        }
       }
     }
   }
@@ -66,6 +89,19 @@
       height: 100%;
       border-radius: 10px 10px 0 0;
       object-fit: cover;
+    }
+
+    .platforms {
+      position: absolute;
+      left: 0;
+      top: 0;
+      background-color: black;
+      border-radius: 10px 0 0 0;
+    }
+
+    .platforms_image {
+      width: 20px;
+      padding: 3px;
     }
   }
 
@@ -81,5 +117,22 @@
 
   &:hover .back {
     transform: rotateY(360deg);
+  }
+}
+
+@keyframes effect_dylan {
+  50% {
+    transform: scale(1.5, 1.5);
+    opacity: 0;
+  }
+
+  99% {
+    transform: scale(0.001, 0.001);
+    opacity: 0;
+  }
+
+  100% {
+    transform: scale(0.001, 0.001);
+    opacity: 1;
   }
 }
