changed styles in products component

--- a/src/components/linksComponents/products/products.module.scss
+++ b/src/components/linksComponents/products/products.module.scss
@@ -2,7 +2,9 @@
   display: flex;
   justify-content: space-between;
   padding: 15px;
-  background-color: gray;
+  background-size: cover;
+  background-image: url(https://storge.pic2.me/c/1360x800/266/5bad5afdc202d.jpg);
+  min-height: 879px;
 
   .loader {
     width: 200px;
@@ -12,5 +14,8 @@
 
   .right_components {
     width: 70%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
